feat: git hooks

--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,12 @@
 {
 	"tasks": {
 		"format": "deno run -A @biomejs/biome format --write; deno run -A @biomejs/biome lint --write",
-		"dev": "deno run --watch --env-file=.env -INE src/app.ts"
+		"dev": "deno run --watch --env-file=.env -INE src/app.ts",
+		"check": "deno run -A @biomejs/biome check"
 	},
 	"imports": {
 		"@biomejs/biome": "npm:@biomejs/biome@2.3.8",
-		"grammy": "https://deno.land/x/grammy@v1.38.3/mod.ts"
+		"grammy": "https://deno.land/x/grammy@v1.38.3/mod.ts",
+		"lefthook": "npm:lefthook@^2.0.11"
 	}
 }
