--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,8 @@
 		"@biomejs/biome": "npm:@biomejs/biome@2.3.8",
 		"grammy": "https://deno.land/x/grammy@v1.38.3/mod.ts",
 		"grammy-i18n": "https://deno.land/x/grammy_i18n@v1.1.0/mod.ts",
-		"lefthook": "npm:lefthook@^2.0.11"
+		"lefthook": "npm:lefthook@^2.0.11",
+		"mongodb": "npm:mongodb@^7.0.0",
+		"typebox": "npm:typebox@^1.0.62"
 	}
 }
