--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,12 @@
 {
 	"tasks": {
 		"format": "deno run -A @biomejs/biome format --write; deno run -A @biomejs/biome lint --write",
-		"dev": "deno run --watch --env-file=.env -INER src/app.ts",
+		"dev": "deno run --watch --env-file=.env -INERS src/app.ts",
 		"check": "deno run -A @biomejs/biome check"
 	},
 	"imports": {
 		"@biomejs/biome": "npm:@biomejs/biome@2.3.8",
+		"@grammyjs/debug": "jsr:@grammyjs/debug@^0.2.1",
 		"grammy": "https://deno.land/x/grammy@v1.38.3/mod.ts",
 		"grammy-i18n": "https://deno.land/x/grammy_i18n@v1.1.0/mod.ts",
 		"lefthook": "npm:lefthook@^2.0.11",
